--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,12 @@ android {
 }
 
 dependencies {
+    implementation "androidx.media3:media3-session:1.3.1"
+    implementation "androidx.media3:media3-exoplayer:1.3.1"
+    implementation "androidx.media3:media3-common:1.3.1"
+    implementation "androidx.media3:media3-ui:1.3.1"
+    implementation "com.google.guava:guava:33.2.1-android"
+
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.core:core-ktx:1.16.0'
